# b24_2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.db.yml  docker-compose.yml  install.sh  migration.config.yml.example  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init_runtime_state.py  0002_runtime_state_domain_split.py  0003_enterprise_mapping_and_verification.py
deploy/nginx/: b24-migrator.conf
deploy/systemd/: b24-migrator-web.service
docker/config/: migration.config.yml.example
src/b24_migrator/: __init__.py  config.py  errors.py  main.py  schemas.py
src/b24_migrator/adapters/: bitrix_client.py
src/b24_migrator/cli/: app.py  exit_codes.py
src/b24_migrator/domain/: models.py  status.py
src/b24_migrator/services/: __init__.py  cutover.py  data_plane.py  domains.py  executor.py  mapping.py  matrix.py  planner.py  runtime.py  verifier.py
src/b24_migrator/storage/: __init__.py  base.py  models.py  repositories.py  session.py
src/b24_migrator/web/: __init__.py  app.py
src/b24_migrator/web/routes/: ui.py
src/b24_migrator/web/static/: style.css
src/b24_migrator/web/templates/: base.html  config.html  dashboard.html  enterprise.html  run.html
tests/: test_cli_runtime.py  test_config.py  test_data_plane_sprint.py  test_executor.py  test_install_script.py  test_mapping_and_verification.py  test_migration_0002.py  test_planner.py  test_readme.py  test_web_api.py  test_web_packaging.py
