[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b24-migration-runtime"
version = "0.1.0"
description = "Deterministic Python CLI runtime for Bitrix24 structured data migration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pymysql>=1.1,<2.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "httpx>=0.27,<1.0",
  "PyYAML>=6.0,<7.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
b24-runtime = "b24_migrator.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
